[bugfix] Implemented responsive design for list container overflow.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -186,7 +186,6 @@ body {
 .list-container {
   flex: 1;
   width: 100%;
-  overflow: scroll;
   background-color: $secondary-color;
   margin: $center;
   ul {
